[package]
name = "curation-ledger"
version = "0.1.0"
edition = "2021"
description = "Kill-rate / curation metric for content pipelines — generated vs shipped, per pipeline/page/week"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "curation-ledger"
path = "src/main.rs"
