[package]
name = "workload-ledger"
version = "0.1.0"
edition = "2021"
description = "Append-only structured run log for every fleet job — the workload-data moat"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "workload-ledger"
path = "src/main.rs"
